--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Python homework help</h1>
 
-<p>For learners pursuing computer science and information systems disciplines, the Python language is often considered one of the easier languages to learn. However, this doesn't imply that college and university students won't require help with Python assignments. Just because the Python code might be easier to work with than some other languages, Python homework can be just as difficult as any other type of assignment. When you need Python assignment help online, a specialized service is now available, featuring Python experts ready to provide the necessary Python homework help even with the most complex assignments. Our service has students like you in mind and works tirelessly to help you succeed.
-We prioritize students like you and strive relentlessly to ensure your success. Some key aspects of our service include:
-Personalized approach. We cater to individual needs, ensuring that each assignment aligns with your specific requirements.
-24/7 availability. Our team is accessible around the clock, enabling you to seek help whenever you need it.
-Confidentiality: We maintain the utmost privacy, keeping your personal information and assignment details secure.
-Choose our service for reliable and timely Python assignment help, and experience the benefits of working with skilled professionals.
+<p>
+Assist students in completing Python assignments (paid)<br>
+
+Process:<br>
+
+1. Students add discord accounts (jinnaluo) as friends.<br>
+
+2. Communicate on Discord.<br>
+
+Price: $1~$100 (determined based on the difficulty of the question)<br>
+
+Delivery time: 1h~72h (based on the difficulty of the question and student requirements)<br>
+
+Payment method: PayPal, Alipay, wechat<br>
+
+Note: Only code and related files will be sent, no explanations or explanations will be provided<br>
 </p>
 </body>
 </html>
