--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@ Assist students in completing Python assignments (paid)<br>
 
 Process:<br>
 
-1. Students add discord accounts (jinnaluo) as friends.<br>
+	1. Students add discord accounts (<span style="color: red;">jinnaluo</span>) as friends.<br>
 
-2. Communicate on Discord.<br>
+	2. Communicate on Discord.<br>
 
 Price: $1~$100 (determined based on the difficulty of the question)<br>
 
