--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ Price: $1~$100 (determined based on the difficulty of the question)<br>
 
 Delivery time: 1h~72h (based on the difficulty of the question and student requirements)<br>
 
-Payment method: PayPal, Alipay, wechat<br>
+Payment method: PayPal, Alipay, wechat,taobao<br>
 
 Note: Only code and related files will be sent, no explanations or explanations will be provided<br>
 </p>
