--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <h1>Python homework help</h1>
 
 <p>
-Assist students in completing Python assignments (paid)<br>
+Assist students in completing Python homework or assignments (paid)<br>
 
 Process:<br>
 
